# OpenCV_learn

2_ORB/: 2_ORB.kdev4  CMakeLists.txt
2_ORB/.kdev4/: 2_ORB.kdev4
2_ORB/test/: run_orb.cpp
3_Learn-OpenCV-4-By-Building-Projects-Second-Edition/: 3_Learn-OpenCV-4-By-Building-Projects-Second-Edition.kdev4  CMakeLists.txt
3_Learn-OpenCV-4-By-Building-Projects-Second-Edition/.kdev4/: 3_Learn-OpenCV-4-By-Building-Projects-Second-Edition.kdev4
3_Learn-OpenCV-4-By-Building-Projects-Second-Edition/src/ch2/: main.cpp
3_Learn-OpenCV-4-By-Building-Projects-Second-Edition/src/ch3/: 3-5.cpp
3_Learn-OpenCV-4-By-Building-Projects-Second-Edition/src/ch4/: 4-3.cpp  4-4.cpp  4-5.cpp
4_VisualOdometry/: 4_VisualOdometry.kdev4  CMakeLists.txt
4_VisualOdometry/.kdev4/: 4_VisualOdometry.kdev4
4_VisualOdometry/test/: 1_goodFeaturesToTrack.cpp  2_cornerSubPix.cpp  3_calcOpticalFlowPyrLK.cpp
